# valmiki

./: .env.example  .gitignore  README.md  deploy.sh  pyproject.toml  server.py
.claude/skills/new-task/: SKILL.md
docs/todos/: character-ui-to-story-engine.md  world-builder.md
docs/ui/: character-maker.md  ui-style-guide.md
story_engine/elements/: character.py
story_engine/interfaces/: prompt_generatable.py
story_engine/lib/: image_utils.py  local_storage.py  output_formatting.py  output_manager.py  prompt_formatting.py  run_logger.py  video_utils.py
story_engine/lib/model_router/: __init__.py  constants.py  image_generation_model_interface.py  model_interface.py  pricing.py  prompt_formatter.py  query.py  retry.py  router.py  utils.py
story_engine/lib/pipeline/: __init__.py  dag_compose.py  memoized_compose.py  schema.py
story_engine/lib/quality_control/: __init__.py  checklist.py  checklist_test.py  pipeline.py  pipeline_test.py  playbook.py  types.py
story_engine/production/: character_designer.py  cost_tracker.py  data_operators.py  director.py  illustrator.py  letterer.py  manager.py  outline.py  publisher.py  scripter.py  style_references.py  template_registry.py  video_editor.py
story_viewer/: index.html  package-lock.json  package.json  vite.config.ts
story_viewer/src/: character.css  main.css  main.tsx
story_viewer/src/api/: client.ts
story_viewer/src/lib/: character-store.ts
story_viewer/src/pages/: CharacterEditorPage.tsx  PipelineViewPage.tsx  ProjectListPage.tsx  ProjectPage.tsx  PromptInspectorPage.tsx  StoryListPage.tsx  (+2 more)
(+63 files in other folders)
